--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "final-node-server-app",
   "version": "1.0.0",
   "description": "",
-  
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -19,5 +19,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17"
   }
 }
